Design (Analyst)/ADMIN/search-bar.css
body {
    padding-top: 0px
}
.input-group-btn .btn-group {
    display: flex !important;
}
.btn-group .btn {
    border-radius: 0;
    margin-left: -1px;
}
.btn-group .btn:last-child {
    background-color: #00703c;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}
.btn-group .form-horizontal .btn[type="submit"] {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}
.form-horizontal .form-group {
    margin-left: 0;
    margin-right: 0;
}
.form-group .form-control:last-child {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}
#title {
    position: relative;
}
@media screen and (min-width: 768px) {
    #adv-search {
        width: 550px;
        margin: 0 auto;
        left: 50px;
    }
}

